<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_toolbar_cart"
        android:orderInCategory="3"
        android:title="@string/action_cart"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_toolbar_notification"
        android:orderInCategory="2"
        android:title="@string/action_notification"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>